# mlir

./: .gitignore
mlir/examples/: CMakeLists.txt
mlir/examples/tfu/: CMakeLists.txt
mlir/examples/tfu/src/: cond_map.cc  cond_map.h  main.cc
mlir/examples/tfu/src/dialect/: CMakeLists.txt  dialect.cc  dialect.h  op.td
mlir/examples/tfu/src/dialect/type/: area.cc  area.h  expr.cc  expr.h  expr_detail.h  expr_visitor.cc  expr_visitor.h  interval.cc  interval.h  interval_detail.h  range.cc  range.h  tfu_type.cc  tfu_type.h  tfu_type_detail.h
mlir/examples/tfu/src/pass/: infer_shape.cc  infer_shape.h
mlir/examples/tfu/unittests/: test_expr.cc  test_halide.cc  test_interval.cc  test_pass.cc
mlir/examples/toy/Ch6/: CMakeLists.txt
mlir/include/mlir/IR/: DialectSymbolRegistry.def  MLIRContext.h
mlir/lib/IR/: MLIRContext.cpp
